<resources>
    <string name="app_name">HealthApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="reminder_text">%1$s: %2$s pill(s)</string>
    <string name="pill_time_reminders_format">%1$s at %2$s</string>
    <string name="it_is_time_to_take">It is time to take %1$s pill(s)!</string>
    <string name="dropdown_label">Disease Name:</string>
    <string name="disease_name">Disease Name</string>
    <string name="specialization"> Spécialisation</string>
    <string name="situation">Situation</string>
    <string-array name="dropdown_items">
        <item>Fever</item>
        <item>Cold</item>
        <item>Diarrhea</item>
        <item>Allergies</item>
        <item>Stomach Aches</item>
    </string-array>

    //SignUp Activity
    <string name="signup_title">S\'inscrire</string>
    <string name="sign_up_title">S\'inscrire</string>
    <string name="create_account">Créer un compte</string>
    <string name="hint_name">Nom</string>
    <string name="hint_first_name">Prénom</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Numéro de téléphone</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_repeat_password">Répéter Mot de Passe</string>
    <string name="btn_create_account">Créer Compte</string>
    <string name="already_have_an_account">Vous avez déjà un compte ?</string>
    <string name="text_sign_in">Se connecter</string>
    <string name="text_log_in">Connectez-vous à votre compte</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="text_no_account">Vous n\'avez pas de compte ?</string>
    <string name="text_create">Créer</string>
    <string name="about_you">À propos de vous</string>
    <string name="relevant_option">Veuillez choisir l\'option appropriée</string>
    <string name="next">Suivant</string>
    <string name="age">Entrez votre âge</string>
    <string name="password_mismatch">Mot de passe incorrect</string>
    <string name="repeat_password">Veuillez répéter votre mot de passe</string>
    <string name="error_phone_number">Veuillez entrer votre numéro de téléphone</string>
    <string name="error_password_incomplete">Votre mot de passe doit contenir 8 caractères, une lettre majuscule, un chiffre et un caractère spécial.</string>
    <string name="error_email">Veuillez entrer une adresse e-mail valide</string>
    <string name="error_last_name">Veuillez entrer votre nom de famille</string>
    <string name="error_first_name">Veuillez entrer votre prénom</string>

    //SignUpFirst
    <string name="profile">Vous êtes un…</string>

    //Error Message
    <string name="error_profile">Veuillez choisir le profil approprié</string>
    <string name="error_dob">Veuillez sélectionner votre date de naissance</string>
    <string name="error_sexe">Veuillez choisir votre sexe</string>
    <string name="error_education">Veuillex choisir votre niveau d\'education</string>
    <string name="error_ethny">Veuillex choisir votre niveau ethnie</string>
    <string name="error_distance">Veuillex choisir sélectionner la distance du centre</string>
    <string name="error_profession">Veuillex saisir votre profession</string>
    <string name="error_prenom">Veuillex saisir votre prenom</string>
    <string name="error_nom">Veuillex saisir votre nom de famille</string>
    <string name="error_phone">Veuillex saisir votre numero de telephone</string>
    <string name="error_id">Veuillex saisr le numero de votre piece d\identite</string>
    <string name="error_gh">Veuillex saisir le GH</string>
    <string name="error_marital">Veuillez choisir votre situation matrimoniale</string>

    //Forgot Password
    <string name="forgot_password_email">Entrez votre adresse e-mail</string>
    <string name="request_new_password">Demande de nouveau mot de passe</string>
    <string name="reset_password">Réinitialiser votre mot de passe</string>
    <string name="textview_forgot_password">Mot de passe oublié</string>
    <string name="liste_des_patients">Liste des Patients</string>
    <string name="recherche">Recherche</string>
    <string name="patients">Patients</string>
    <string name="selectionner_date">Selectionner Date</string>
    <string name="aucun_patient">Aucun Patient</string>
    <string name="nom_du_patient">Nom du Patient:</string>
    <string name="patient_sexe">Sexe</string>
    <string name="patient_dob">Date de Naissance</string>
    <string name="patient_ethnie">Ethnie</string>
    <string name="patient_niveau_instruction">Niveau d\'Instruction</string>
    <string name="patient_profession">Profession</string>
    <string name="patient_quartier_village">Quartier/Village</string>
    <string name="patient_distance">Distance</string>
    <string name="title_dossier_de_la_patiente">Dossier de la Patiente</string>
    <string name="btn_suivant">Suivant 1/2</string>
    <string name="patient_nom_mari">Nom du Mari</string>
    <string name="patient_nom">Nom</string>
    <string name="patient_prenom_mari">Prénom du Mari</string>
    <string name="patient_profession_mari">Profession du Mari</string>
    <string name="patient_allocation_famialiale">Allocation Famialiale</string>
    <string name="btn_termine">Terminé 2/2</string>
    <string name="patient_id_number">Numéro d\'identification</string>
    <string name="patient_single_status">Situation Matrimoniale</string>

    //SignInActivity

</resources>