<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".app.views.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/curve_box_final"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/signUpHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_title"
                android:textColor="@color/black"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signUph2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/signUpHeader"
                app:layout_constraintTop_toBottomOf="@+id/signUpHeader" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/sign_up_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu_doctor_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:background="@drawable/editfield"
                android:hint="@string/specialization"
                android:textColorHint="@android:color/darker_gray"
                app:boxBackgroundColor="#F5F8FA"
                app:layout_constraintEnd_toEndOf="@+id/select_time"
                app:layout_constraintStart_toStartOf="@+id/select_time"
                app:layout_constraintTop_toBottomOf="@+id/select_time">

                <AutoCompleteTextView
                    android:id="@+id/sign_up_type_doctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/SignUp_Name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/SignUp_Name"
                app:layout_constraintTop_toBottomOf="@+id/SignUp_Name" />

            <EditText
                android:id="@+id/sign_up_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/SignUp_Email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/SignUp_Email"
                app:layout_constraintTop_toBottomOf="@+id/SignUp_Email" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:longClickable="false"
                android:textColor="@color/black"
                android:drawableRight="@drawable/visibility_off"
                android:paddingRight="15dp"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/SignUp_Email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/SignUp_Email"
                app:layout_constraintTop_toBottomOf="@+id/SignUp_Email" />

            <EditText
                android:id="@+id/signUp_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/hint_repeat_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:longClickable="false"
                android:textColor="@color/black"
                android:drawableRight="@drawable/visibility_off"
                android:paddingRight="15dp"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/SignUp_Email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/SignUp_Email"
                app:layout_constraintTop_toBottomOf="@+id/SignUp_Email" />

            <Button
                android:id="@+id/create_account"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/primary_button"
                android:text="@string/btn_create_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SignUp_Password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/createAccount"
                app:layout_constraintStart_toStartOf="@+id/createAccount"
                app:layout_constraintTop_toBottomOf="@+id/createAccount"
                app:layout_constraintVertical_bias="0.529">

                <TextView
                    android:id="@+id/sign_in_suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="131dp"
                    tools:layout_editor_absoluteY="680dp" />

                <TextView
                    android:id="@+id/to_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/text_sign_in"
                    android:textColor="@color/light_blue"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="266dp"
                    tools:layout_editor_absoluteY="676dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>