<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".app.views.AddPatientActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/curve_box_final"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/signUpHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Identité"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signUph2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_dossier_de_la_patiente"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/signUpHeader"
                app:layout_constraintTop_toBottomOf="@+id/signUpHeader" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="vertical"
            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/patient_nom"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/sign_up_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:clickable="true"
                android:focusable="true"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:drawablePadding="5dp"
                android:id="@+id/sexe"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/patient_sexe"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                />

            <EditText
                android:clickable="true"
                android:focusable="true"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawablePadding="5dp"
                android:id="@+id/patient_dob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/patient_dob"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                />

            <EditText
                android:id="@+id/carte_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/patient_id_number"
                android:inputType="text"
                android:paddingStart="20dp"
                android:longClickable="false"
                android:textColor="@color/black"
                android:paddingRight="15dp"
                android:textColorHint="@android:color/darker_gray"
                />



            <EditText
                android:clickable="true"
                android:focusable="true"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:drawablePadding="5dp"
                android:id="@+id/ethny"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/patient_ethnie"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                />


            <EditText
                android:id="@+id/gs"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="GS/RH"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/SignUp_Name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/SignUp_Name"
                app:layout_constraintTop_toBottomOf="@+id/SignUp_Name" />


            <EditText
                android:clickable="true"
                android:focusable="true"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:drawablePadding="5dp"
                android:id="@+id/patient_niveau_instruction"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/patient_niveau_instruction"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                />



            <EditText
                android:clickable="true"
                android:focusable="true"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:drawablePadding="5dp"
                android:id="@+id/patient_situation_matri"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="Situation Matrimoniale"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                />

            <EditText
                android:id="@+id/patient_profession"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/patient_profession"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                 />

            <EditText
                android:id="@+id/patient_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/SignUp_Email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/SignUp_Email"
                app:layout_constraintTop_toBottomOf="@+id/SignUp_Email" />

            <EditText
                android:id="@+id/patient_quartier"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/patient_quartier_village"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:longClickable="false"
                android:textColor="@color/black"
                android:paddingRight="15dp"
                android:textColorHint="@android:color/darker_gray"
                 />



            <EditText
                android:clickable="true"
                android:focusable="true"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:drawablePadding="5dp"
                android:id="@+id/patient_distance"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/editfield"
                android:ems="10"
                android:hint="@string/patient_distance"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                />


            <Button
                android:id="@+id/btn_next"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/primary_button"
                android:text="@string/btn_suivant"
                android:textAllCaps="false"
                android:textColor="@color/white"
                 />



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>